SystemUI: Update Simplified Chinese translations

--- a/packages/SystemUI/res/values-zh-rCN/yaap_strings.xml
+++ b/packages/SystemUI/res/values-zh-rCN/yaap_strings.xml
@@ -104,4 +104,11 @@
     <!-- USB tethering QS tile -->
     <string name="quick_settings_usb_tether_label">USB 网络共享</string>
 
+    <!-- DataSwitch Tile -->
+    <string name="qs_data_switch_label">切换数据卡</string>
+    <string name="qs_data_switch_toast_0">当前未插入 SIM 卡</string>
+    <string name="qs_data_switch_toast_1">当前仅插入一张 SIM 卡</string>
+    <string name="qs_data_switch_changed_1">已切换到卡1</string>
+    <string name="qs_data_switch_changed_2">已切换到卡2</string>
+
 </resources>
